@startuml Restaurante

class Restaurant {
    String name
    String address 
}

class Table {
    int tableNumber
    Integer capacity
    boolean isOccupied
}
class MenuItem {
    String name
    Double price
}

class OrderItem{
    Integer quatity
}

class Order {
    orderNumber
 
}
enum OrderStatus{
    PENDING
    IN_PROGRESS
    DELIVERED
}

class Menu {
    String name
    
}

class Employee {
    String name
    Employee(String name)
    String getName()
}
' Relaciones
' o-- es Agregacion -> Parte de
' -- es Asociacion  -> Usa, Necesita, Esta relacionado
' *-- es Composicion -> Parte de Obligatorio
'  --> Dependencia 

Restaurant"1" o-- "1.." Table
Restaurant "1" o-- "2..50" Employee
Restaurant "1" *-- "1.." Menu
Table "1"-- "0..*"Order
Menu "1" *-- "1" MenuItem: menuItems
MenuItem "1" -- "0..*" OrderItem
Order "1" *-- "1..*" OrderItem
Order --> OrderStatus : status



@enduml